--- a/app/assets/stylesheets/pages/_activities.scss
+++ b/app/assets/stylesheets/pages/_activities.scss
@@ -42,6 +42,9 @@
   font-size: 1rem;
   margin-top: 10px;
   color: black;
+  font-family: "Roboto", serif;
+  font-weight: 500;
+  font-style: normal;
 }
 
 .rating-box {
@@ -173,6 +176,10 @@ p {
   font-size: 16px;
   line-height: 1.6;
   color: #404040;
+  font-family: "Roboto", serif;
+  font-weight: 400;
+  font-style: normal;
+
 }
 
 .show-more {
