--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -100,6 +100,9 @@ body.home-page {
   margin-top: 2px;
   font-size: 14px;
   padding-left: 1vh;
+  font-family: "Roboto", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 
