--- a/app/views/users/account.html.erb
+++ b/app/views/users/account.html.erb
@@ -13,7 +13,8 @@
 
       </div>
       <div class='user-info'>
-        <p><%= current_user.username %></p>
+
+        <p class='username'><%= current_user.username %></p>
         <div class='prof-button'>
           <%= link_to 'Show Profile', profile_path %>
         </div>
