--- a/app/assets/stylesheets/pages/_club.scss
+++ b/app/assets/stylesheets/pages/_club.scss
@@ -81,7 +81,7 @@ body {
 
 .club-title h1 {
   color: white;
-  font-family: "Roboto", serif;
+  font-family: "Comfortaa", serif;
   font-weight: 500;
   font-style: normal;
 }
