small search bar touches

--- a/app/assets/stylesheets/pages/_search_bar.scss
+++ b/app/assets/stylesheets/pages/_search_bar.scss
@@ -38,6 +38,7 @@
 .search-container{
   text-align: center;
   margin-top: 50px;
+  margin-bottom: 14px
 }
 
 .search-bar-box{
@@ -60,7 +61,7 @@ padding-left: 15px;
 .search-container {
   position: relative;
   z-index: 20;
-  top: 4px;
+  top: 11px;
 }
 
 .search-bar-box {
