--- a/app/assets/stylesheets/pages/_activities-index.scss
+++ b/app/assets/stylesheets/pages/_activities-index.scss
@@ -93,14 +93,14 @@ a {
   background-color: black;
   color: white;
   font-weight: bold;
-  padding-top: 2vh;
-  padding-bottom: 2vh;
+  padding-top: 12px;
+  padding-bottom: 12px;
   padding-right: 4vh;
   padding-left: 4vh;
   border-radius: 30px;
   border: 1px solid white;
   position: sticky;
-  bottom: 10vh;
+  bottom: 9vh;
 
   margin: 0 auto;
   display: block;
