--- a/app/assets/stylesheets/pages/_form.scss
+++ b/app/assets/stylesheets/pages/_form.scss
@@ -1,12 +1,13 @@
 .edit-activity {
   margin-top: 18px;
-  font-family: "Roboto", serif;
+  font-family: "Comfortaa", serif;
   font-weight: 500;
   font-style: normal;
 }
 
 .form-group {
-  font-family: "Roboto", serif;
-  font-weight: 100;
+  font-family: "Comfortaa", serif;
+  font-weight: 400;
   font-style: normal;
+  margin-left: 4vw;
 }
